--- a/README.Rmd
+++ b/README.Rmd
@@ -46,8 +46,8 @@ ggplot(iris, aes(x = Sepal.Length, y = Petal.Length, color = Species, shape = Sp
   theme_minimal()
 
 ggplot(mtcars, aes(x = mpg, fill = as.factor(cyl)))+
-  geom_density(alpha = 0.8, bw = 0.9)+
-  scale_fill_manual(values = SmashingPumpkins::pumpkins_palette("mellon_collie")[1:3])+
+  geom_density(alpha = 0.7, bw = 1.1)+
+  scale_fill_manual(values = SmashingPumpkins::pumpkins_palette("siamese_dream_light")[2:4])+
   ylab("")+
   theme_dark()
 
